# fashion-recommender

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
data/example/: sample_5.jsonl
prompts/: agent.yaml  descriptor.yaml  recommender.yaml  vton.yaml
src/backend/app/: config.py  dependencies.py  main.py  prompt_manager.py  prompts.py
src/backend/app/models/: schemas.py
src/backend/app/services/: agent.py  descriptor.py  graph.py  recommender.py  retrieval.py  search.py  session.py  vton.py
src/backend/app/utils/: image_utils.py  utils.py
src/frontend/: package-lock.json
src/frontend/src/app/: page.tsx
src/frontend/src/components/: ChatInput.tsx  ChatMessage.tsx
src/frontend/src/lib/: api.ts
src/frontend/src/types/: index.ts
utils/: create_collection_ctl.py  push_prompt.py
