[project]
name = "fashion-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "beautifulsoup4>=4.14.2",
    "crawl4ai>=0.7.4",
    "cssselect>=1.3.0",
    "google-genai>=1.43.0",
    "groq>=0.32.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "openai>=2.2.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "selenium>=4.27.1",
    "transformers>=4.57.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "qdrant-client>=1.16.1",
    "pydantic>=2.12.0",
    "jinja2>=3.1.6",
    "instructor>=1.13.0",
    "litellm>=1.77.7",
    "langgraph>=1.0.4",
    "langsmith>=0.4.49",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "ddgs>=9.9.3",
    "tavily-python>=0.7.14",
    "fastapi>=0.124.4",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]
torchaudio = [
  { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
